# Odometry_nerf_fix

./: README.md
fieldfixer/: .gitignore  DATASETS.md  DESIGN.md  LICENSE  README.md  RECIPES.md  pyproject.toml  run_demo.bat  run_demo.ps1
fieldfixer/fieldfixer/: __init__.py  cli.py
fieldfixer/fieldfixer/bake/: __init__.py  pipeline.py
fieldfixer/fieldfixer/bake/exporters/: __init__.py  pack.py
fieldfixer/fieldfixer/bake/modules/: __init__.py  deblurnerf.py  nerfw.py  rawnerf.py  rsnerf.py
fieldfixer/fieldfixer/config/: default.yaml
fieldfixer/fieldfixer/config/profiles/: fast.yaml  quality.yaml
fieldfixer/fieldfixer/io/: __init__.py  sidecar.py  video.py
fieldfixer/fieldfixer/ops/: __init__.py  exposure.py  lut3d.py  mask.py  warp.py
fieldfixer/samples/alley_night/: README.txt
fieldfixer/samples/alley_night/bake/: curves.json  meta.json
fieldfixer/samples/alley_night/bake/LUT/: scene.cube
fieldfixer/scripts/: frames_to_video.py  make_demo_video.py  quick_bake_rs_from_gs.py
fieldfixer/tests/: README.md  test_lut3d.py  test_ops_warp.py  test_pack.py  test_sidecar.py
