[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ['fieldfixer*']
exclude = ['tests*', 'samples*', 'third_party*']

[project]
name = "fieldfixer"
version = "0.1.0"
description = "NeRF-powered footage repair with CPU-only runtime"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "numba>=0.59",
  "opencv-python>=4.10",
  "imageio>=2.34",
  "av>=12.0.0",
  "pydantic>=2.8",
  "typer>=0.12.3",
  "tqdm>=4.66",
  "hydra-core>=1.3.2",
]

[project.scripts]
fieldfixer = "fieldfixer.cli:app"
